# SuchTree

./: .coveragerc  .gitignore  .travis.yml  404.html  CITATION.cff  CNAME  LICENSE  MANIFEST.in  README.md  SpectralClassification.ipynb  codemeta.json  conftest.py  example_2.ipynb  example_3.ipynb  examples.ipynb  examples_linked_trees.ipynb  exmaples_linked_trees.ipynb  gen_docs.py  index.html  mkdocs.yml  objects.inv  paper.bib  pyproject.toml  requirements-docs.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  slides1.ipynb
.github/workflows/: codecov.yml  docs.yml  package.yml  python-package.yml  wheels.yml
SuchTree/: MuchTree.c  MuchTree.pyx  SuchTree.pyx  __init__.py  exceptions.py
SuchTree/tests/: lice.tree  links.csv  support_comment.tree  support_float.tree  test.matrix  test.tree  test_SuchLinkedTrees.py  test_SuchTree.py  test_new_api.py
SuchTree_API/: index.html
api/: index.html
api_docs/: index.html
benchmarks/: index.html
data/: SimulateData.ipynb  spectral_properties.csv  studies.json
data/bigtrees/: README.md  count_table.tsv  host.tree  ml.tree  nj.tree
data/dove-louse/: bird_COI.fasta  bird_cytb.fasta  bird_fibrinogen.fasta  dove-louse.ipynb  louse_12s.fasta  louse_COI.fasta  louse_EF1.fasta
data/dove-louse/alignments/: RAxML_info.bird  RAxML_info.louse  RAxML_log.bird  RAxML_log.louse  RAxML_parsimonyTree.bird  RAxML_parsimonyTree.louse  bird.nex  bird.phylip  bird.tree  bird.txt  bird_COI.nex  bird_cytb.nex  bird_fibrinogen.nex  louse.nex  louse.phylip  louse.tree  louse.txt  louse_12s.nex  louse_COI.nex  louse_EF1.nex
data/fish-worm/: association_concat.txt  cichlido_association_CopyCat.txt  fish-worm.ipynb  guest.tree  host.tree  host_vs_parasite_GBIDs.csv  links.csv
data/gopher-louse/: Gopher-Louse.ipynb  gopher-louse-associations.txt  gopher.fasta  lice.fasta  links.csv
data/plant-pollinators/: references.tsv  references.txt
data/plant-pollinators/arr1/: animal.tree  arr1_links.csv  plant.tree
data/plant-pollinators/arr2/: animal.tree  arr2_links.csv  plant.tree
data/plant-pollinators/arr3/: animal.tree  arr3_links.csv  plant.tree
data/plant-pollinators/bahe/: animal.tree  bahe_links.csv  plant.tree
data/plant-pollinators/bair/: animal.tree  bair_links.csv  plant.tree
data/plant-pollinators/beeh/: animal.tree  beeh_links.csv  plant.tree
data/plant-pollinators/cacg/: animal.tree  cacg_links.csv  plant.tree
data/plant-pollinators/caci/: animal.tree  caci_links.csv  plant.tree
data/plant-pollinators/caco/: animal.tree  caco_links.csv  plant.tree
data/plant-pollinators/cafr/: animal.tree  cafr_links.csv  plant.tree
data/plant-pollinators/cllo/: animal.tree  cllo_links.csv  plant.tree
data/plant-pollinators/crom/: animal.tree  crom_links.csv  plant.tree
data/plant-pollinators/dihi/: animal.tree  dihi_links.csv  plant.tree
data/plant-pollinators/dish/: animal.tree  dish_links.csv  plant.tree
data/plant-pollinators/dupo/: animal.tree  dupo_links.csv  plant.tree
data/plant-pollinators/eol/: animal.tree  eol_links.csv  plant.tree
data/plant-pollinators/eolz/: animal.tree  eolz_links.csv  plant.tree
data/plant-pollinators/eski/: animal.tree  eski_links.csv  plant.tree
data/plant-pollinators/fros/: animal.tree  fros_links.csv  plant.tree
data/plant-pollinators/gen1/: animal.tree  gen1_links.csv  plant.tree
data/plant-pollinators/gen2/: animal.tree  gen2_links.csv  plant.tree
data/plant-pollinators/hamm/: animal.tree  hamm_links.csv  plant.tree
data/plant-pollinators/herr/: animal.tree  herr_links.csv  plant.tree
data/sedge-smut/: guest.tree  host.tree  links.csv  sedge-smut.ipynb
datasets/: index.html
docs/: CNAME  SuchTree_API.md  api.md  api_docs.md  benchmarks.md  datasets.md  examples.md  gen_docs.py  index.md  paper.bib  paper.md  release_notes.md  slides1.ipynb  slides2.ipynb  slides3.ipynb
docs/examples/: SuchLinkedTree_examples.ipynb  SuchLinkedTree_examples.md  SuchTree_examples.ipynb  SuchTree_examples.md
docs/javascripts/: config.js
docs/stylesheets/: extra.css
examples/: SuchLinkedTree_examples.ipynb  SuchTree_examples.ipynb
examples/SuchLinkedTree_examples/: index.html
examples/SuchTree_examples/: index.html
old_notebooks/: example_2.ipynb
paper/: index.html
release_notes/: index.html
search/: search_index.json
stylesheets/: extra.css
tools/: gen_version.py
(+419 files in other folders)
