[options]
install_requires = 
    cython
    numpy
    scipy
    pandas
    dendropy

[metadata]
name = SuchTree
version = attr: SuchTree.__version__
author = Russell Neches
author_email = ryneches@ucdavis.edu
url = https://github.com/ryneches/SuchTree
description = A python library for doing fast, thread-safe computations on phylogenetic trees
long_description = file: README.md
long_description_content_type = text/markdown
keywords = biology, bio, phylogenetics, phylogeny, tree
license = BSD
classifiers =
  License :: OSI Approved :: BSD License
  Programming Language :: Python :: 3
